Fixed GET, still need to format client-side. Too bad I hate CSS.

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -15,12 +15,12 @@
         <option value='class'>Class</option>
         <option value='race'>Race</option>
       </select>
-      <input type="submit" value="search">
+      <input type="submit" value="Search">
     </form>
   </section>
   <section id="content">
     <select id="results">
-
+      <option value='null'>---</option>
     </select>
   </section>
 </body>
