--- a/hosted/client.html
+++ b/hosted/client.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>WebSheets</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
-  <script src = "/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </head>
+
 <body>
   <section>
-    <form id="queryForm" action = "/getChar">
-      Search: <br>  
-      <input id="query" type="text"><br>
+    <form id="queryForm" action="/getChar">
+      Search:
+      <br>
+      <input id="query" type="text">
+      <br>
       <select id="queryType">
         <option value='name'>Name</option>
         <option value='class'>Class</option>
@@ -22,6 +26,94 @@
     <select id="results">
       <option value='null'>---</option>
     </select>
+  </section>
+  <section id="charForm">
+    <select id="race"></select>
+    <select id="subrace"></select>
+    <select id="alignment"></select>
+    <select id="class"></select>
+    <select id="subclass">
+      <option value='null'>---</option>
+    </select>
+    <input id="level" type="number" min="1" max="20">
+    <select id="background"></select>
+    <!-- Text fields for traits, ideal, bond, flaw -->
+    <fieldset>
+      <legend>Languages (Check all that apply)</legend>
+      <div id="standard_lang">
+        <div>
+          <input type="checkbox" id="common" name="languages" value="Common" checked>
+          <label for="common">Common</label>
+        </div>
+        <div>
+          <input type="checkbox" id="dwarvish" name="languages" value="Dwarvish">
+          <label for="common">Dwarvish</label>
+        </div>
+        <div>
+          <input type="checkbox" id="elvish" name="languages" value="Elvish">
+          <label for="elvish">Elvish</label>
+        </div>
+        <div>
+          <input type="checkbox" id="giant" name="languages" value="Giant">
+          <label for="giant">Giant</label>
+        </div>
+        <div>
+          <input type="checkbox" id="gnomish" name="languages" value="Gnomish">
+          <label for="gnomish">Gnomish</label>
+        </div>
+        <div>
+          <input type="checkbox" id="goblin" name="languages" value="Goblin">
+          <label for="goblin">Goblin</label>
+        </div>
+        <div>
+          <input type="checkbox" id="halfling" name="languages" value="Halfling">
+          <label for="halfling">Halfling</label>
+        </div>
+        <div>
+          <input type="checkbox" id="orc" name="languages" value="Orc">
+          <label for="orc">Orc</label>
+        </div>
+      </div>
+      <div id="exotic_lang">
+        <div>
+          <input type="checkbox" id="abyssal" name="languages" value="Abyssal">
+          <label for="abyssal">Abyssal</label>
+        </div>
+        <div>
+          <input type="checkbox" id="celestial" name="languages" value="Celestial">
+          <label for="celestial">Celestial</label>
+        </div>
+        <div>
+          <input type="checkbox" id="draconic" name="languages" value="Draconic">
+          <label for="draconic">Draconic</label>
+        </div>
+        <div>
+          <input type="checkbox" id="deep_speech" name="languages" value="Deep Speech">
+          <label for="deep_speech">Deep Speech</label>
+        </div>
+        <div>
+          <input type="checkbox" id="infernal" name="languages" value="Infernal">
+          <label for="infernal">Infernal</label>
+        </div>
+        <div>
+          <input type="checkbox" id="primordial" name="languages" value="Primordial">
+          <label for="primordial">Primordial</label>
+        </div>
+        <div>
+          <input type="checkbox" id="sylvan" name="languages" value="Sylvan">
+          <label for="sylvan">Sylvan</label>
+        </div>
+        <div>
+          <input type="checkbox" id="undercommon" name="languages" value="Undercommon">
+          <label for="undercommon">Undercommon</label>
+        </div>
+      </div>
+    </fieldset>
+    <input type="checkbox">
+    <select id="feat0"></select>
+    <!-- Button to add additional feat(s) -->
+    <!-- Text fields for scores, age, hp_max -->
+
   </section>
 </body>
 </html>
