--- a/hosted/client.html
+++ b/hosted/client.html
@@ -25,18 +25,25 @@
   <section id="content">
     <select id="results">
       <option value='null'>---</option>
-    </select>
+    </select> <br>
   </section>
   <section id="charForm">
-    <select id="race"></select>
-    <select id="subrace"></select>
-    <select id="alignment"></select>
-    <select id="class"></select>
+    <select id="race"></select> <br>
+    <select id="subrace">
+      <option value='null'>---</option>
+    </select> <br>
+    <select id="alignment"></select> <br>
+    <select id="class"></select> <br>
     <select id="subclass">
       <option value='null'>---</option>
-    </select>
-    <input id="level" type="number" min="1" max="20">
-    <select id="background"></select>
+    </select> <br>
+    <input id="level" type="number" min="1" max="20"> <br>
+    <select id="background"></select> <br>
+    <input type="text" id='trait1'> <br>
+    <input type="text" id='trait2'> <br>
+    <input type="text" id='ideal'> <br>
+    <input type="text" id='bond'> <br>
+    <input type="text" id='flaw'> <br>
     <!-- Text fields for traits, ideal, bond, flaw -->
     <fieldset>
       <legend>Languages (Check all that apply)</legend>
@@ -110,7 +117,7 @@
       </div>
     </fieldset>
     <input type="checkbox">
-    <select id="feat0"></select>
+    <select id="feat"></select>
     <!-- Button to add additional feat(s) -->
     <!-- Text fields for scores, age, hp_max -->
 
