--- a/hosted/client.html
+++ b/hosted/client.html
@@ -10,10 +10,11 @@
 <body>
   <section>
     <form id="queryForm" action="/getChar">
-      Search:
+      <label for="query">Search:</label>
       <br>
       <input id="query" type="text">
       <br>
+      <label for="queryType">Seach by </label>
       <select id="queryType">
         <option value='name'>Name</option>
         <option value='class'>Class</option>
@@ -22,32 +23,88 @@
       <input type="submit" value="Search">
     </form>
   </section>
+
   <section id="content">
+    <label for="results">Results: </label>
     <select id="results">
       <option value='null'>---</option>
-    </select> <br>
+    </select>
+    <br>
   </section>
+
+  <section id="stats">
+      <div class="stat_block">
+        <input type="number" name='stat' id="str" min="4" max="30"> <br>
+        <label for="str">STR</label>
+      </div>
+      <div class="stat_block">
+        <input type="number" name='stat' id="dex" min="4" max="30"> <br>
+        <label for="dex">DEX</label>
+      </div>
+      <div class="stat_block">
+        <input type="number" name='stat' id="con" min="4" max="30"> <br>
+        <label for="con">CON</label>
+      </div>
+      <div class="stat_block">
+        <input type="number" name='stat' id="int" min="4" max="30"> <br>
+        <label for="int">INT</label>
+      </div>
+      <div class="stat_block">
+        <input type="number" name='stat' id="wis" min="4" max="30"> <br>
+        <label for="wis">WIS</label>
+      </div>
+      <div class="stat_block">
+        <input type="number" name='stat' id="cha" min="4" max="30"> <br>
+        <label for="cha">CHA</label>
+      </div>
+  </section>
+
   <section id="charForm">
-    <select id="race"></select> <br>
+    <label for="charName">Name:</label>
+    <input type="text" id="charName">
+    <br>
+    <label for="race">Race: </label>
+    <select id="race"></select>
+    <label for="subrace">Subrace:</label>
     <select id="subrace">
       <option value='null'>---</option>
-    </select> <br>
-    <select id="alignment"></select> <br>
-    <select id="class"></select> <br>
+    </select>
+    <br>
+    <label for="class">Class:</label>
+    <select id="class"></select>
+    <label for="subclass">Subclass:</label>
     <select id="subclass">
       <option value='null'>---</option>
-    </select> <br>
-    <input id="level" type="number" min="1" max="20"> <br>
-    <select id="background"></select> <br>
-    <input type="text" id='trait1'> <br>
-    <input type="text" id='trait2'> <br>
-    <input type="text" id='ideal'> <br>
-    <input type="text" id='bond'> <br>
-    <input type="text" id='flaw'> <br>
-    <!-- Text fields for traits, ideal, bond, flaw -->
-    <fieldset>
+    </select>
+    <label for="level">Level:</label>
+    <input id="level" type="number" min="1" max="20">
+    <br>
+    <label for="background">Background:</label>
+    <select id="background"></select>
+    <!-- May remove all alignment/background bits -->
+    <label for="alignment">Alignment:</label>
+    <select id="alignment"></select>
+    <br>
+    <label for="trait1">Trait (1):</label>
+    <input type="text" id='trait1'>
+    <br>
+    <label for="trait2">Trait (2):</label>
+    <input type="text" id='trait2'>
+    <br>
+    <label for="ideal">Ideal:</label>
+    <input type="text" id='ideal'>
+    <br>
+    <label for="bond">Bond:</label>
+    <input type="text" id='bond'>
+    <br>
+    <label for="flaw">Flaw:</label>
+    <input type="text" id='flaw'>
+    <br>
+    <label for="feat">Feat:</label>
+    <select id="feat"></select>
+    <fieldset form="charForm">
       <legend>Languages (Check all that apply)</legend>
-      <div id="standard_lang">
+      <div id="standard_lang" class="left">
         <div>
           <input type="checkbox" id="common" name="languages" value="Common" checked>
           <label for="common">Common</label>
@@ -81,7 +138,7 @@
           <label for="orc">Orc</label>
         </div>
       </div>
-      <div id="exotic_lang">
+      <div id="exotic_lang" class="right">
         <div>
           <input type="checkbox" id="abyssal" name="languages" value="Abyssal">
           <label for="abyssal">Abyssal</label>
@@ -116,11 +173,7 @@
         </div>
       </div>
     </fieldset>
-    <input type="checkbox">
-    <select id="feat"></select>
-    <!-- Button to add additional feat(s) -->
-    <!-- Text fields for scores, age, hp_max -->
-
+    <input type="submit" id="saveButton" value="Save">
   </section>
 </body>
 </html>
